@@ -155,7 +155,7 @@ sub search {
     die 'No user found' unless $self->catalyst_user;
 
     my $auth = Net::LDAP::Control::ProxyAuth->new(
-        authzID  => 'u:' . $self->catalyst_user->username,
+        authzID  => 'u:' . $self->catalyst_user->ldap_username,
         critical => 1,
     );
 
