@@ -2,6 +2,7 @@ This file documents the revision history for UFL::Phonebook.
 
 0.36
         - Add request throttling to BaseController (#95)
+        - Update authentication to make better use of Shibboleth
 
 0.35  Fri Mar  5 09:47:00 EST 2010
         - Update to latest version of Catalyst scripts
